# backup-operator

./: Dockerfile  README.md  backup.py  pyproject.toml
.github/workflows/: build_and_release.yml
